--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
   "dependencies": {
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.2",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^5.15.0",
+    "bcryptjs": "^3.0.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "prisma": "^5.15.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
